deploy/overlay/embedder/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emb-svc
spec:
  ports:
    - protocol: TCP
      port: 11434
      targetPort: 11434
      name: hc
  selector:
    app: emb
